# wbox

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
doc/: nt.md  win32k.md
src/: main.c
src/cpu/: 386.c  386_common.c  386_common.h  386_dynarec.c  386_dynarec_ops.c  386_ops.h  codegen_timing_486.c  codegen_timing_686.c  codegen_timing_common.c  codegen_timing_k5.c  codegen_timing_k6.c  codegen_timing_p6.c  codegen_timing_pentium.c  codegen_timing_winchip.c  codegen_timing_winchip2.c  cpu.c  cpu.h  cpu_table.c  device.h  dma.h  fdc.h  fdd.h  fpu.c  gdbstub.h  io.h  keyboard.h  machine.h  mem.c  mem.h  nmi.h  nvr.h  pci.h  pic.h  pit.h  plat.h  platform.h  ppi.h  rom.h  smram.h  stubs.c  (+31 more)
src/cpu/codegen/: codegen.c  codegen.h  codegen_accumulate.c  codegen_allocator.c  codegen_backend_arm64.c  codegen_backend_arm64_ops.c  codegen_backend_arm64_uops.c  codegen_backend_x86-64.c  codegen_backend_x86-64_ops.c  codegen_backend_x86-64_ops_sse.c  codegen_backend_x86-64_uops.c  codegen_block.c  codegen_ir.c  codegen_ops.c  codegen_ops_3dnow.c  codegen_ops_arith.c  codegen_ops_branch.c  codegen_ops_fpu_arith.c  codegen_ops_fpu_constant.c  codegen_ops_fpu_loadstore.c  codegen_ops_fpu_misc.c  codegen_ops_helpers.c  codegen_ops_jump.c  codegen_ops_logic.c  codegen_ops_misc.c  codegen_ops_mmx_arith.c  codegen_ops_mmx_cmp.c  codegen_ops_mmx_loadstore.c  codegen_ops_mmx_logic.c  codegen_ops_mmx_pack.c  codegen_ops_mmx_shift.c  codegen_ops_mov.c  codegen_ops_shift.c  codegen_ops_stack.c  codegen_reg.c
src/cpu/softfloat3e/: consts.cc  extF80_compare.cc
src/gdi/: display.c  display.h  gdi_dc.c  gdi_dc.h  gdi_drawing.c  gdi_drawing.h  gdi_handle_table.c  gdi_handle_table.h  gdi_objects.h  gdi_text.c  gdi_text.h  gdi_types.h
src/loader/: exports.c  exports.h  imports.c  imports.h  loader.c  loader.h  module.c  module.h  ntdll_stubs.h  stubs.c  stubs.h  win32k_stubs.h
src/nt/: handles.c  handles.h  heap.c  heap.h  ntdll.c  sync.c  sync.h  sys_file.c  sys_process.c  syscall_table.c  syscalls.h  vfs_jail.c  vfs_jail.h  win32k_dispatcher.c  win32k_dispatcher.h  win32k_syscalls.h
src/pe/: pe_loader.c  pe_loader.h
src/process/: process.c  process.h
src/thread/: scheduler.c  scheduler.h  thread.c  thread.h
src/user/: desktop_heap.c  desktop_heap.h  guest_cls.c  guest_cls.h  guest_wnd.c  guest_wnd.h  user_callback.c  user_callback.h  user_class.c  user_class.h  user_handle_table.c  user_handle_table.h  user_message.c  user_message.h  user_shared.c  user_shared.h  user_syscalls.c  user_syscalls.h  user_window.c  user_window.h
src/vm/: mem.h  paging.c  paging.h  vm.c  vm.h
tests/: CMakeLists.txt  cpu_test.c  mooreader.c  mooreader.h
tests/pe/: file_test.asm  hello.asm  import_test.asm  sysenter_test.asm
